--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="スコアが300点は取れるミニゲームです。">
+    <meta property="og:title" content="SCORE >= 300" />
+    <meta property="og:site_name" content="SCORE >= 300" />
+    <meta property="og:description" content="スコアが300点は取れるミニゲームです。" />
+    <meta property="og:image" content="https://score-300.web.app/img/icons/icon-384-384.png" />
+    <meta property="og:url" content="https://score-300.web.app/" />
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="ja_JP" />
+    <meta name="twitter:image" content="https://score-300.web.app/img/icons/icon-192x192.png" />
+    <meta name="twitter:card" content="summary" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>img/icons/icon-192x192.png" sizes="192x192"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
